Fix tables
- Make table font size responsive
- Make table cell padding responsive
- Add suble table borders in mobile to account for the lower padding
- Wrap tables and make them have a max width, scrolling in mobile (if too wide)
- Make article svg have max-width to prevent page overflow
- Improve table styling in articles

--- a/src/styles/layers/reset.css
+++ b/src/styles/layers/reset.css
@@ -58,6 +58,7 @@
   }
 
   img,
+  svg,
   video {
     max-width: 100%;
     height: auto;
